--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ url: https://ZacCac.github.io
 # Auxiliary links (if needed)
 aux_links:
   GitHub Repository: https://github.com/ZacCac/ZacCac.github.io
-  LinkedIn: https://www.linkedin.com/in/zacgwennap/
+  LinkedIn: https://www.linkedin.com/in/zachary-gwennap/
